--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/gasteve/node-txtool.git"
+    "url": "https://github.com/bitpay/cosign.git"
   },
   "scripts": {},
   "engines": {
